# just-install

./: Cargo.toml
src/: main.rs
