[package]
name = "just-install"
version = "0.1.0"
authors = ["Randy Schütt <rswhite4@googlemail.com>"]
edition = "2018"

[dependencies]
just-core = {path = "../just-core"}
just-download = {path = "../just-download"}
just-extract = {path = "../just-extract"}
just-fetch = { path = "../just-fetch" }
log = "0.4.6"
semver= "0.9"
structopt = "0.2.14"
