[package]
name = "just-install"
version = "0.1.0"
authors = ["Randy Schütt <rswhite4@googlemail.com>"]
edition = "2018"

[dependencies]
just-core = { git = "https://github.com/just-cli/just-core" }
just-download = { git = "https://github.com/just-cli/just-download" }
just-extract = { git = "https://github.com/just-cli/just-extract" }
just-fetch = { git = "https://github.com/just-cli/just-fetch" }
log = "0.4.6"
semver= "0.9"
structopt = "0.2.14"
